Add Gradle plugin repository by default, some small cleanups